--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -1,11 +1,16 @@
 {
   "name": "sample_store",
+  "main": "server.ts",
+  "nodemonConfig": {
+    "ext": "ts,json"
+  },
   "scripts": {
     "start": "ts-node server.ts",
     "start:dev": "nodemon"
   },
   "devDependencies": {
     "@types/express": "^4",
+    "@types/mongoose": "^5",
     "@types/node": "^15.6.0",
     "@yarnpkg/pnpify": "^3.0.0-rc.3",
     "nodemon": "^2.0.7",
@@ -13,6 +18,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "hjs": "^0.0.6",
+    "mongoose": "^5.12.11"
   }
 }
