--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -10,8 +10,11 @@
   },
   "devDependencies": {
     "@types/express": "^4",
+    "@types/express-session": "^1",
     "@types/mongoose": "^5",
     "@types/node": "^15.6.0",
+    "@types/passport": "^0",
+    "@types/passport-local": "^1",
     "@yarnpkg/pnpify": "^3.0.0-rc.3",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
@@ -19,7 +22,10 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "hjs": "^0.0.6",
-    "mongoose": "^5.12.11"
+    "mongoose": "^5.12.11",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0"
   }
 }
