--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -21,6 +21,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hjs": "^0.0.6",
