--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -9,6 +9,7 @@
     "start:dev": "nodemon"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5",
     "@types/express": "^4",
     "@types/express-session": "^1",
     "@types/mongoose": "^5",
@@ -21,6 +22,7 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
