--- a/sample_store/.editorconfig
+++ b/sample_store/.editorconfig
@@ -1,10 +1,7 @@
-root = true
-
-[*]
+[{*.cjs, *.js, *.json, *.rjson, *.ts}]
 end_of_line = lf
+trim_trailing_whitespace = true
 insert_final_newline = true
-
-[*.{js,json,.yml}]
 charset = utf-8
-indent_style = space
+indent_style = tab
 indent_size = 2
