--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -29,6 +29,7 @@
     "hjs": "^0.0.6",
     "mongoose": "^5.12.11",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "rome": "^10.0.4-beta"
   }
 }
