Completed Zenva Course

--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -12,6 +12,7 @@
     "@types/bcrypt": "^5",
     "@types/express": "^4",
     "@types/express-session": "^1",
+    "@types/mailgun-js": "^0",
     "@types/mongoose": "^5",
     "@types/node": "^15.6.0",
     "@types/passport": "^0",
@@ -27,6 +28,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "hjs": "^0.0.6",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.11",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
