--- a/sample_store/package.json
+++ b/sample_store/package.json
@@ -15,6 +15,7 @@
     "@types/mailgun-js": "^0",
     "@types/mongoose": "^5",
     "@types/node": "^15.6.0",
+    "@types/node-fetch": "^2",
     "@types/passport": "^0",
     "@types/passport-local": "^1",
     "@yarnpkg/pnpify": "^3.0.0-rc.3",
@@ -30,6 +31,7 @@
     "hjs": "^0.0.6",
     "mailgun-js": "^0.22.0",
     "mongoose": "^5.12.11",
+    "node-fetch": "^2.6.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "rome": "^10.0.4-beta"
