--- a/sample_store/tsconfig.json
+++ b/sample_store/tsconfig.json
@@ -8,6 +8,7 @@
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
+    "resolveJsonModule": true,
 
     // "declaration": false,
     // "removeComments": true,
@@ -18,7 +19,7 @@
     // "strict": true,
     // "alwaysStrict": true,
     "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
+    "esModuleInterop": true
     // "skipLibCheck": true,
     // "forceConsistentCasingInFileNames": true
   }
